# Perclipperan

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
scratch/: discover_ffmpeg.py  get_ffmpeg_path.py
scripts/: dummy_transcript.json  facetracker_app.py  llama_wrapper.py  whisper_app.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs  video.rs
src/components/: DownloadScreen.tsx  EditorScreen.tsx  ImportScreen.tsx  ProcessingScreen.tsx  ResultScreen.tsx
